--- a/templates/mongodb-secret.yaml
+++ b/templates/mongodb-secret.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mongodb-secret
+  name: {{ .Values.mongodb.name }}-secret
+  namespace: {{ .Values.namespace }}
 type: Opaque
 stringData:
   mongo-user: "{{ .Values.mongodb.username }}"
